# Brokenithm-Android-Server

./: CMakeLists.txt  README.md
segatools/aimeio/: aimeio.c
segatools/chuniio/: chuniio.c
src/: main.cpp  resources.rc  socket.h  struct.h  version.h
